--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -243,7 +243,7 @@
 
             <li class="nav-item">
               <a class="nav-link text-white {% if request.endpoint == 'main.vendas' %}active border-start border-3 border-primary{% endif %}"
-                 href="{{ url_for('vendas.vendas') }}">
+                 href="{{ url_for('sales_core.vendas_lista') }}">
                 <i class="fas fa-shopping-cart"></i> <span>Vendas (PDV)</span>
               </a>
             </li>
